# openai-embed

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/openai_embed/: cli.py
